[package]
name = "nginx-es"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-await = "0.2.1"
chrono = "0.4.22"
colored = "2.0.0"
elasticsearch = "8.15.0-alpha.1"
flate2 = "1.0.24"
futures = { version = "0.3", features = ["compat"] }
logwatcher = "0.1.1"
regex = "1"
reqwest = { version = "0.12", features = ["json"]}
serde = "1.0.144"
serde_derive = "1.0.144"
serde_json = "1.0.85"
sha1 = "0.10.5"
termsize = "0.1"
tokio = {version = "*", features = ["full"]}

[profile.release]
strip = true
opt-level = 3
lto = true
